--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/G2Icon 2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta
+    name="description"
+    content="Web site created using create-react-app"
+  />
+  <link rel="apple-touch-icon" href="/G2Icon 2.png" />
+  
+  <link rel="manifest" href="/manifest.json" />
     <title>G2Plannix</title>
   </head>
   <body>
